# CARL_UoA_2025

./: .gitignore  Left Front Wheg.stp  Left Rear Wheg.stp  README copy.md  README.md  Right Front Wheg.stp  Right Middle Wheg.stp  Right Rear Wheg.stp  V20_CableSleeve.stp  V20_Clamp_Top_MiddleBody.stp  V20_EndBody_PiAssembly.stp  V20_MiddleBody_Assembly.stp  V20_MotorWhegAttachments.stp  carl_controller_client.py  classes.dot  config.yaml  config_joint.yaml  config_wheg.yaml  controller.py  foxglove.txt  foxglove_dashboard.layout.json  ls  ls.pub  main.py  package-lock.json  ps4_test.py  pygame_test.py  requirements.txt  streamlittest.py  test.py
CAD_Files/: Left Middle Wheg.stp  V20_Clamp_Top_EndBody.stp  V20_EndBody_BatteryAssembly.stp  V20_Lid_EndBody+Oring.stp  V20_Lid_MiddleBody+Oring.stp  V20_MotorSleeves.stp
FLIK_initial_testing_hingefullrange/: FLIK_initial_testing_hingefullrange.ino
src/carl_controller/: package.xml  setup.cfg  setup.py
src/carl_controller/carl_controller/: controller_state_monitor_node.py  joint.py  joint_node.py  ps4_controller_node.py  test.py  wheg_node.py
src/carl_controller/carl_controller/lib/: controller_input_definitions.py  controller_input_defs.py
src/carl_controller/carl_controller/wheg_plugin/: dynamixel_control.py  dynamixel_joint_control.py  dynamixel_wheg_control.py  gait_controller.py
src/carl_controller/launch/: dashboard_launch.py  motor_control_nodes_launch.py  ps4_controller_launch.py
src/carl_controller/test/: package.xml  test_control_node.py  test_feedback_control_node.py  test_joint_node.py  test_wheg_node.py
(+41 files in other folders)
