<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carl_controller</name>
  <version>0.0.0</version>
  <description>Controller node for CARL robot wheg locomotion</description>
  <maintainer email="jaconewman00@gmail.com">Jacob Newman</maintainer>
  <license>TODO: License declaration</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>dynamixel_control</depend>

  <!-- External dependencies -->
  <exec_depend>dynamixel-sdk</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- For launching -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
